Added media directory (so we have somewhere to put the auto-generated docs in the distribution)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		</style>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.dataTables.js"></script>
-		<script type="text/javascript" charset="utf-8" src="js/FixedColumns.js"></script>
+		<script type="text/javascript" charset="utf-8" src="media/js/FixedColumns.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready( function () {
 				var oTable = $('#example').dataTable( {
