--- a/index.html
+++ b/index.html
@@ -37,30 +37,15 @@
 			<h1>Live example</h1>
 			<div id="demo">
 <table cellpadding="0" cellspacing="0" border="0" class="display" id="example">
-<thead>
-  <tr>
-      <th rowspan="2">Rendering engine</th>
-      <th rowspan="2">Browser</th>
-      <th colspan="2">Machine</th>
-      <th rowspan="2">CSS grade</th>
-  </tr>
-  <tr>
-    <th>Platform(s)</th>
-    <th>Engine version</th>
-  </tr>
-</thead>
-<tfoot>
-  <tr>
-      <th rowspan="2">Rendering engine</th>
-      <th rowspan="2">Browser</th>
-      <th colspan="2">Machine</th>
-      <th rowspan="2">CSS grade</th>
-  </tr>
-  <tr>
-    <th>Platform(s)</th>
-    <th>Engine version</th>
-  </tr>
-</tfoot>
+	<thead>
+		<tr>
+			<th>Rendering engine</th>
+			<th>Browser</th>
+			<th>Platform(s)</th>
+			<th>Engine version</th>
+			<th>CSS grade</th>
+		</tr>
+	</thead>
 	<tbody>
 		<tr class="gradeX">
 			<td>Trident</td>
