--- a/x_y_scrolling.html
+++ b/x_y_scrolling.html
@@ -559,6 +559,7 @@
 				<li><a href="index_column.html">Index column attached to side of the table</a></li>
 				<li><a href="x_y_scrolling.html">Index column, but with Y scrolling and no pagination</a></li>
 				<li><a href="two_columns.html">Two columns fixed in place</a></li>
+				<li><a href="col_filter.html">Individual column filtering</a></li>
 			</ul>
 			
 			
