--- a/x_y_scrolling.html
+++ b/x_y_scrolling.html
@@ -560,12 +560,14 @@
 				<li><a href="x_y_scrolling.html">Index column, but with Y scrolling and no pagination</a></li>
 				<li><a href="two_columns.html">Two columns fixed in place</a></li>
 				<li><a href="col_filter.html">Individual column filtering</a></li>
+				<li><a href="right_column.html">Fix the right column in place</a></li>
+				<li><a href="left_right_columns.html">Fix the left and right columns in place</a></li>
 			</ul>
 			
 			
 			<div id="footer" style="text-align:center;">
 				<span style="font-size:10px;">
-					FixedColumns and DataTables &copy; Allan Jardine 2010.<br>
+					FixedColumns and DataTables &copy; Allan Jardine 2011.<br>
 				</span>
 			</div>
 		</div>
