Fix: Visible code match running code

--- a/right_column.html
+++ b/right_column.html
@@ -477,7 +477,8 @@
  		"bScrollCollapse": true
  	} );
  	new FixedColumns( oTable, {
- 		"columns": 2
+		"iColumns": 0,
+		"iRightColumns": 1
  	} );
  } );</pre>
 
