New: Support rowspan for FixedColumns. Added example showing this running

--- a/right_column.html
+++ b/right_column.html
@@ -489,6 +489,7 @@
 				<li><a href="x_y_scrolling.html">Index column, but with Y scrolling and no pagination</a></li>
 				<li><a href="two_columns.html">Two columns fixed in place</a></li>
 				<li><a href="col_filter.html">Individual column filtering</a></li>
+				<li><a href="rowspan.html">Rowspan on the fixed column</a></li>
 				<li><a href="right_column.html">Fix the right column in place</a></li>
 				<li><a href="left_right_columns.html">Fix the left and right columns in place</a></li>
 			</ul>
