--- a/rowspan.html
+++ b/rowspan.html
@@ -20,31 +20,35 @@
 					"sScrollXInner": "150%",
 					"bScrollCollapse": true
 				} );
-				new FixedColumns( oTable, {
-					"iColumns": 2
-				} );
+				new FixedColumns( oTable );
 			} );
 		</script>
 	</head>
 	<body id="dt_example">
 		<div id="container">
 			<div class="full_width big">
-				FixedColumns example
+				FixedColumns example - rowspan in the header
 			</div>
 			
 			<h1>Preamble</h1>
-			<p>FixedColumns allows more than one column to be frozen into place using hte <i>iColumns</i> parameter. The example below shows two columns fixed.</p>
+			<p>If you are using multiple rows in the table header, it can be useful to have a rowspanning cell on the column(s) you have fixed in place - equally at other times it can be useful to not and make use of the two or more cells per column. FixedColumns will automatically take into account rowspan elements - as shown in this example.</p>
 			
 			<h1>Live example</h1>
 			<div id="demo">
 <table cellpadding="0" cellspacing="0" border="0" class="display" id="example">
 	<thead>
 		<tr>
-			<th>Rendering engine</th>
+			<th rowspan="2">Rendering engine</th>
 			<th>Browser</th>
 			<th>Platform(s)</th>
 			<th>Engine version</th>
 			<th>CSS grade</th>
+		</tr>
+		<tr>
+			<th>Name and version</th>
+			<th>Operating systems</th>
+			<th>Rendering engine</th>
+			<th>Support level</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -452,15 +456,6 @@
 			<td class="center">U</td>
 		</tr>
 	</tbody>
-	<tfoot>
-		<tr>
-			<th>Rendering engine</th>
-			<th>Browser</th>
-			<th>Platform(s)</th>
-			<th>Engine version</th>
-			<th>CSS grade</th>
-		</tr>
-	</tfoot>
 </table>
 			</div>
 			<div class="spacer"></div>
@@ -468,15 +463,13 @@
 			
 			<h1>Initialisation code</h1>
 			<pre>$(document).ready( function () {
- 	var oTable = $('#example').dataTable( {
- 		"sScrollX": "100%",
- 		"sScrollXInner": "150%",
- 		"bScrollCollapse": true
- 	} );
- 	new FixedColumns( oTable, {
- 		"iColumns": 2
- 	} );
- } );</pre>
+	var oTable = $('#example').dataTable( {
+		"sScrollX": "100%",
+		"sScrollXInner": "150%",
+		"bScrollCollapse": true
+	} );
+	new FixedColumns( oTable );
+} );</pre>
 
 			<h1>Examples</h1>
 			<ul>
