--- a/left_right_columns.html
+++ b/left_right_columns.html
@@ -8,10 +8,16 @@
 		<style type="text/css" title="currentStyle">
 			@import "../../media/css/demo_page.css";
 			@import "../../media/css/demo_table.css";
-			.FixedColumns_Cloned th { background-color: white; }
 			td.indexLeft { background-color: white; border-right: 1px solid black; }
 			td.indexRight { background-color: white; border-left: 1px solid black; }
-			table.display th.sorting_disabled { border-bottom: 1px solid white; }
+			div.DTFC_LeftHeadWrapper th,
+			div.DTFC_RightHeadWrapper th {
+				border-bottom: 1px solid white !important;
+			}
+			div.DTFC_LeftFootWrapper th,
+			div.DTFC_RightFootWrapper th {
+				border-top: 1px solid white !important;
+			}
 		</style>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.dataTables.js"></script>
@@ -26,8 +32,8 @@
 						/* Need to redo the counters if filtered or sorted */
 						if ( oSettings.bSorted || oSettings.bFiltered ) {
 							for ( var i=0, iLen=oSettings.aiDisplay.length ; i<iLen ; i++ ) {
-								$('td:first', oSettings.aoData[ oSettings.aiDisplay[i] ].nTr ).html( i+1 );
-								$('td:last', oSettings.aoData[ oSettings.aiDisplay[i] ].nTr ).html( i+1 );
+								this.fnUpdate( i+1, oSettings.aiDisplay[i], 0, false, false );
+								this.fnUpdate( i+1, oSettings.aiDisplay[i], 6, false, false );
 							}
 						}
 					},
@@ -39,7 +45,7 @@
 				} );
 				
 				new FixedColumns( oTable, {
-					"iColumns": 1,
+					"iLeftColumns": 1,
 					"iRightColumns": 1
 				} );
 			} );
@@ -52,7 +58,7 @@
 			</div>
 			
 			<h1>Preamble</h1>
-			<p>FixedColumns allows columns to be fixed from both the left and right hand sides of the table. Fixing right hand-side columns is done by using the <i>iRightColumns</i> initialisation parameter, which works just the same as <i>iColumns</i> does for the left side of the table. Tis example shows both the left and right columns being fixed in place, and a bit of initialisation of DataTables to provide index columns.</p>
+			<p>FixedColumns allows columns to be fixed from both the left and right hand sides of the table. Fixing right hand-side columns is done by using the <i>iRightColumns</i> initialisation parameter, which works just the same as <i>iLeftColumns</i> does for the left side of the table. This example shows both the left and right columns being fixed in place, and a bit of initialisation of DataTables to provide index columns.</p>
 			
 			<h1>Live example</h1>
 			<div id="demo">
@@ -468,7 +474,7 @@
 			<td>Nintendo DS browser</td>
 			<td>Nintendo DS</td>
 			<td class="center">8.5</td>
-			<td class="center">C/A<sup>1</sup></td>
+			<td class="center">C/A</td>
 			<td class="center">43</td>
 		</tr>
 		<tr class="gradeC">
@@ -613,8 +619,8 @@
 			/* Need to redo the counters if filtered or sorted */
 			if ( oSettings.bSorted || oSettings.bFiltered ) {
 				for ( var i=0, iLen=oSettings.aiDisplay.length ; i&lt;iLen ; i++ ) {
-					$('td:first', oSettings.aoData[ oSettings.aiDisplay[i] ].nTr ).html( i+1 );
-					$('td:last', oSettings.aoData[ oSettings.aiDisplay[i] ].nTr ).html( i+1 );
+					this.fnUpdate( i+1, oSettings.aiDisplay[i], 0, false, false );
+					this.fnUpdate( i+1, oSettings.aiDisplay[i], 6, false, false );
 				}
 			}
 		},
@@ -626,22 +632,38 @@
 	} );
 	
 	new FixedColumns( oTable, {
-		"iColumns": 1,
+		"iLeftColumns": 1,
 		"iRightColumns": 1
 	} );
 } );</pre>
 
-			<h1>Examples</h1>
+
+			<h1>Documentation</h1>
+			<ul>
+				<li><a href="http://datatables.net/extras/fixedcolumns">Usage</a></li>
+				<li><a href="http://datatables.net/docs/FixedColumns">API / parameters</a></li>
+			</ul>
+
+			<h1>Basic examples</h1>
 			<ul>
 				<li><a href="index.html">Basic demo of FixedColumns with zero initialisation</a></li>
+				<li><a href="left_right_columns.html">Fix the left and right columns in place</a></li>
 				<li><a href="index_column.html">Index column attached to side of the table</a></li>
 				<li><a href="x_y_scrolling.html">Index column, but with Y scrolling and no pagination</a></li>
 				<li><a href="two_columns.html">Two columns fixed in place</a></li>
-				<li><a href="col_filter.html">Individual column filtering</a></li>
-				<li><a href="rowspan.html">Rowspan on the fixed column</a></li>
 				<li><a href="right_column.html">Fix the right column in place</a></li>
-				<li><a href="left_right_columns.html">Fix the left and right columns in place</a></li>
+				<li><a href="css_size.html">Speeding up row height matching with CSS</a></li>
 			</ul>
+			
+			<h1>Advanced examples</h1>
+			<ul>
+				<li><a href="rowspan.html">Using ROWSPAN with FixedColumns</a></li>
+				<li><a href="col_filter.html">Individual column filtering</a></li>
+				<li><a href="scale_fixed.html">Setting the fixed column width and resizing the table</a></li>
+				<li><a href="scale_relative.html">Setting the fixed column width with relative sizing</a></li>
+				<li><a href="row_grouping_height.html">Row grouping by grouping like rows in the fixed column</a></li>
+				<li><a href="row_grouping.html">Row grouping by inserting a grouping row</a></li>
+			<ul>
 			
 			
 			<div id="footer" style="text-align:center;">
