--- a/col_filter.html
+++ b/col_filter.html
@@ -8,8 +8,6 @@
 		<style type="text/css" title="currentStyle">
 			@import "../../media/css/demo_page.css";
 			@import "../../media/css/demo_table.css";
-			.FixedColumns_Cloned thead th, .FixedColumns_Cloned thead td, 
-				.FixedColumns_Cloned tfoot th, .FixedColumns_Cloned tfoot td { background-color: white; }
 			thead input { width: 100% }
 			input.search_init { color: #999 }
 		</style>
@@ -75,7 +73,7 @@
 	<body id="dt_example">
 		<div id="container">
 			<div class="full_width big">
-				FixedColumns example with individual column filtering
+				FixedColumns example - individual column filtering
 			</div>
 			
 			<h1>Preamble</h1>
@@ -412,7 +410,7 @@
 			<td>Nintendo DS browser</td>
 			<td>Nintendo DS</td>
 			<td class="center">8.5</td>
-			<td class="center">C/A<sup>1</sup></td>
+			<td class="center">C/A</td>
 		</tr>
 		<tr class="even_gradeC">
 			<td>KHTML</td>
@@ -573,19 +571,34 @@
 	} );
 	new FixedColumns( oTable );
 } );</pre>
-			
-			
-			<h1>Examples</h1>
+
+
+			<h1>Documentation</h1>
+			<ul>
+				<li><a href="http://datatables.net/extras/fixedcolumns">Usage</a></li>
+				<li><a href="http://datatables.net/docs/FixedColumns">API / parameters</a></li>
+			</ul>
+
+			<h1>Basic examples</h1>
 			<ul>
 				<li><a href="index.html">Basic demo of FixedColumns with zero initialisation</a></li>
+				<li><a href="left_right_columns.html">Fix the left and right columns in place</a></li>
 				<li><a href="index_column.html">Index column attached to side of the table</a></li>
 				<li><a href="x_y_scrolling.html">Index column, but with Y scrolling and no pagination</a></li>
 				<li><a href="two_columns.html">Two columns fixed in place</a></li>
-				<li><a href="col_filter.html">Individual column filtering</a></li>
-				<li><a href="rowspan.html">Rowspan on the fixed column</a></li>
 				<li><a href="right_column.html">Fix the right column in place</a></li>
-				<li><a href="left_right_columns.html">Fix the left and right columns in place</a></li>
+				<li><a href="css_size.html">Speeding up row height matching with CSS</a></li>
 			</ul>
+			
+			<h1>Advanced examples</h1>
+			<ul>
+				<li><a href="rowspan.html">Using ROWSPAN with FixedColumns</a></li>
+				<li><a href="col_filter.html">Individual column filtering</a></li>
+				<li><a href="scale_fixed.html">Setting the fixed column width and resizing the table</a></li>
+				<li><a href="scale_relative.html">Setting the fixed column width with relative sizing</a></li>
+				<li><a href="row_grouping_height.html">Row grouping by grouping like rows in the fixed column</a></li>
+				<li><a href="row_grouping.html">Row grouping by inserting a grouping row</a></li>
+			<ul>
 			
 			
 			<div id="footer" style="text-align:center;">
