New: Two new examples - one to show server-side processing and the other to show jQuery UI theming

--- a/row_grouping.html
+++ b/row_grouping.html
@@ -581,11 +581,13 @@
 				<li><a href="two_columns.html">Two columns fixed in place</a></li>
 				<li><a href="right_column.html">Fix the right column in place</a></li>
 				<li><a href="css_size.html">Speeding up row height matching with CSS</a></li>
+				<li><a href="themed.html">jQuery UI themed table with FixedColumns</a></li>
 			</ul>
 			
 			<h1>Advanced examples</h1>
 			<ul>
 				<li><a href="rowspan.html">Using ROWSPAN with FixedColumns</a></li>
+				<li><a href="server-side-processing.html">Server-side processing with FixedColumns</a></li>
 				<li><a href="col_filter.html">Individual column filtering</a></li>
 				<li><a href="scale_fixed.html">Setting the fixed column width and resizing the table</a></li>
 				<li><a href="scale_relative.html">Setting the fixed column width with relative sizing</a></li>
