Moving on to 2.5 development Significant update in therms of how FixedColumns operates - no longer will it set the column visbility for the columns to be fixed, and instead just places the fixed columns on top of the target columns (similar to how FixedHeader works). The grid layout has been updated to allow for this. New: The fixed columns can be used for scrolling! Both x-scrolling (which works using the mousewheel event) and y-scrolling (which is natural scrolling) will work now, which will make the interaction a lot less confusing for end users. New: The scrollbar when fixing a right column is no longer in the middle of the table (which is the main reason for changing the column vibility method to the new overlay) - it is now where you would expect on the right of the table.
Dev note: The column sizing isn't yet perfect in the example with two fixed left columns - to do

--- a/col_filter.html
+++ b/col_filter.html
@@ -5,12 +5,16 @@
 		<link rel="shortcut icon" type="image/ico" href="http://www.sprymedia.co.uk/media/images/favicon.ico">
 		
 		<title>ColReorder example</title>
-		<style type="text/css" title="currentStyle">
-			@import "../../media/css/demo_page.css";
-			@import "../../media/css/demo_table.css";
+
+		<link rel="stylesheet" type="text/css" href="../../media/css/demo_page.css">
+		<link rel="stylesheet" type="text/css" href="../../media/css/jquery.dataTables.css">
+		<link rel="stylesheet" type="text/css" href="media/css/FixedColumns.css">
+		
+		<style type="text/css">
 			thead input { width: 100% }
 			input.search_init { color: #999 }
 		</style>
+
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.dataTables.js"></script>
 		<script type="text/javascript" charset="utf-8" src="media/js/FixedColumns.js"></script>
@@ -58,6 +62,7 @@
 					"sScrollX": "100%",
 					"sScrollXInner": "150%",
 					"bScrollCollapse": true,
+					"bSortCellsTop": true,
 					"sDom": 'C<"clear">lfrtip',
 					"aoColumnDefs": [
 						{ "bVisible": false, "aTargets": [ 2 ] }
