--- a/css_size.html
+++ b/css_size.html
@@ -5,11 +5,15 @@
 		<link rel="shortcut icon" type="image/ico" href="http://www.sprymedia.co.uk/media/images/favicon.ico">
 		
 		<title>FixedColumns example</title>
-		<style type="text/css" title="currentStyle">
-			@import "../../media/css/demo_page.css";
-			@import "../../media/css/demo_table.css";
+
+		<link rel="stylesheet" type="text/css" href="../../media/css/demo_page.css">
+		<link rel="stylesheet" type="text/css" href="../../media/css/jquery.dataTables.css">
+		<link rel="stylesheet" type="text/css" href="media/css/FixedColumns.css">
+		
+		<style type="text/css">
 			tr { height: 50px; }
 		</style>
+
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.dataTables.js"></script>
 		<script type="text/javascript" charset="utf-8" src="media/js/FixedColumns.js"></script>
