--- a/right_column.html
+++ b/right_column.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<link rel="shortcut icon" type="image/ico" href="http://www.sprymedia.co.uk/media/images/favicon.ico">
-		
 		<title>FixedColumns example</title>
-		<style type="text/css" title="currentStyle">
-			@import "../../media/css/demo_page.css";
-			@import "../../media/css/demo_table.css";
-		</style>
+
+		<link rel="stylesheet" type="text/css" href="../../media/css/demo_page.css">
+		<link rel="stylesheet" type="text/css" href="../../media/css/jquery.dataTables.css">
+		<link rel="stylesheet" type="text/css" href="media/css/FixedColumns.css">
+
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.dataTables.js"></script>
 		<script type="text/javascript" charset="utf-8" src="media/js/FixedColumns.js"></script>
@@ -17,7 +17,9 @@
 				var oTable = $('#example').dataTable( {
 					"sScrollX": "100%",
 					"sScrollXInner": "150%",
-					"bScrollCollapse": true
+					"bScrollCollapse": true,
+					bPaginate: false,
+					sScrollY: 300
 				} );
 				new FixedColumns( oTable, {
 					"iLeftColumns": 0,
