--- a/row_grouping.html
+++ b/row_grouping.html
@@ -5,13 +5,17 @@
 		<link rel="shortcut icon" type="image/ico" href="http://www.sprymedia.co.uk/media/images/favicon.ico">
 		
 		<title>FixedColumns example</title>
-		<style type="text/css" title="currentStyle">
-			@import "../../media/css/demo_page.css";
-			@import "../../media/css/demo_table.css";
+
+		<link rel="stylesheet" type="text/css" href="../../media/css/demo_page.css">
+		<link rel="stylesheet" type="text/css" href="../../media/css/jquery.dataTables.css">
+		<link rel="stylesheet" type="text/css" href="media/css/FixedColumns.css">
+
+		<style type="text/css">
 			.FixedColumns_Cloned th { background-color: white; }
 			td.index { background-color: white; border-right: 1px solid black; }
 			table.display th.sorting_disabled { border-bottom: 1px solid white; }
 		</style>
+
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.dataTables.js"></script>
 		<script type="text/javascript" charset="utf-8" src="media/js/FixedColumns.js"></script>
