--- a/themed.html
+++ b/themed.html
@@ -5,11 +5,12 @@
 		<link rel="shortcut icon" type="image/ico" href="http://www.sprymedia.co.uk/media/images/favicon.ico">
 		
 		<title>FixedColumns example</title>
-		<style type="text/css" title="currentStyle">
-			@import "../../media/css/demo_page.css";
-			@import "../../media/css/demo_table_jui.css";
-			@import "../../examples/examples_support/themes/smoothness/jquery-ui-1.8.4.custom.css";
-		</style>
+
+		<link rel="stylesheet" type="text/css" href="../../media/css/demo_page.css">
+		<link rel="stylesheet" type="text/css" href="../../media/css/jquery.dataTables_themeroller.css">
+		<link rel="stylesheet" type="text/css" href="../../examples/examples_support/themes/smoothness/jquery-ui-1.8.4.custom.css">
+		<link rel="stylesheet" type="text/css" href="media/css/FixedColumns.css">
+
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.dataTables.js"></script>
 		<script type="text/javascript" charset="utf-8" src="media/js/FixedColumns.js"></script>
